src/test/ui/arbitrary-self-types-not-object-safe.object_safe_for_dispatch.stderr
error[E0038]: the trait `Foo` cannot be made into an object
  --> $DIR/arbitrary-self-types-not-object-safe.rs:34:32
   |
LL |     let x = Rc::new(5usize) as Rc<Foo>;
   |                                ^^^^^^^ the trait `Foo` cannot be made into an object
   |
   = note: method `foo`'s receiver cannot be dispatched on
   = note: required by cast to type 'std::rc::Rc<dyn Foo>'

error: aborting due to previous error

For more information about this error, try `rustc --explain E0038`.
